--- a/ui/index.html
+++ b/ui/index.html
@@ -3,16 +3,19 @@
     <head>
         <title>Mail</title>
 
-        <link href="css/style.css" rel="stylesheet">
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
         <!-- <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"> -->
 
+        <link href="css/style.css" rel="stylesheet">
+
         <script src="bower_components/angular/angular.min.js"></script>
-        
-        <script src="js/app.js"></script>
+        <script src="bower_components/angular-ui/build/angular-ui.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="js/mailboxes.js"></script>
         <script src="js/folder.js"></script>
         <script src="js/message.js"></script>
+        <script src="js/common/error/errorList.js"></script>
+        <script src="js/app.js"></script>
 
         <script>
             // global.$ = $;
@@ -43,6 +46,7 @@
                 </ul>
             </div>
             <div style="" class="messages-container" ng-controller="FolderController">
+                <div ng-show="!emails.length" class="text-center" style="color: #999; margin: 10px;">No emails in this folder.</div>
                 <div class="message-row" ng-click="selectEmail(email)" ng-class="{active: email === selectedEmail}" ng-repeat="email in emails">
                     <div class="message-top-row">
                         <span class="message-from"><span ng-hide="!!email.isRead" class="label label-primary">Unread</span> {{ email.from }} </span>
