--- a/ui/index.html
+++ b/ui/index.html
@@ -49,7 +49,7 @@
                 <div ng-show="!!emails && !emails.length" class="text-center" style="color: #999; margin: 10px;">No emails in this folder.</div>
                 <div class="message-row" ng-click="selectEmail(email)" ng-class="{active: email === selectedEmail}" ng-repeat="email in emails">
                     <div class="message-top-row">
-                        <span class="message-from"><span ng-hide="!!email.isRead" class="label label-primary">Unread</span> {{ email.from }} </span>
+                        <span class="message-from"><div ng-hide="!!email.isRead" class="unread"></div> {{ email.from }} </span>
                         <span class="text-right message-date"> {{email.dateTimeReceived }}</span>
                     </div>
                     <div class="message-subject" style="color: #999; clear: both;"> {{email.subject}} </div>
