--- a/ui/index.html
+++ b/ui/index.html
@@ -72,6 +72,7 @@
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-ui/build/angular-ui.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <script src="bower_components/jquery/jquery.min.js"></script>
         <script src="js/mailboxes.js"></script>
         <script src="js/folder.js"></script>
         <script src="js/message.js"></script>
@@ -79,7 +80,7 @@
         <script src="js/app.js"></script>
 
         <script>
-            // global.$ = $;
+            global.$ = $;
             global.gui = require('nw.gui')
 
             
